@@ -7,6 +7,7 @@ if (!exists(".devtesting")) {
         require(ggplot2)      # the 2 ggplot tests take so long they get in the way in dev
         require(hexbin)
         require(nlme)
+        require(xls)
     })
     # The suppression is for users running test.data.table(). If they don't have ggplot2 installed we don't
     # want to warn about it not being installed. 'R CMD check' is a stricter test that will warn if the
@@ -2283,6 +2284,15 @@ test(837, DT[,a:=cbind(1,2)], warning="2 column matrix RHS of := will be treated
 DT = data.table(a=1:3,b=1:6)
 test(838, DT[,c:=scale(b), by=a][,c:=as.integer(1000*c)], data.table(a=1:3,b=1:6,c=rep(as.integer(1000*scale(1:2)), each=3)))
 
+# S3 dispatch of xts::last
+if ("package:xts" %in% search()) {
+    x = xts(1:100, Sys.Date()+1:100)
+    test(839, last(x,10), x[91:100,])
+} else cat("Test 839 not run. If required call library(xts) first.\n")
+DT = data.table(a=1:10)
+test(840, last(DT), DT[10])
+test(841, last(1:10), 10L)
+test(842, last(list("a",1:2,89)), 89)
 
 # TO DO:
 #DT = data.table(a=1:3,b=1:6,key="a")
